--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "1.0.0",
   "description": "An api wrapper for Zermelo written in TypeScript",
   "main": "test/index.js",
+  "module": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc --build",
+    "clean": "tsc --build --clean"
   },
   "author": "LuukOriginal",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.27.2",
+    "node-fetch": "^2.6.1",
     "typescript": "^4.8.3"
+  },
+  "devDependencies": {
+    "@types/node-fetch": "^2.6.2"
   }
 }
