--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,35 @@
 {
-    "compilerOptions": {
-      "target": "es6",
-      "module": "CommonJS",
-      "outDir": "./build",
-      "rootDir": "./src",
-      "strict": true,
+  "compilerOptions": {
+      "allowSyntheticDefaultImports": true,
       "esModuleInterop": true,
-      "forceConsistentCasingInFileNames": true,
-      "removeComments": true
-    },
-    "include": ["src"],
-    "exclude": ["node_modules", "test"],
+      "alwaysStrict": true,
+      "declaration": true,
+      "emitDecoratorMetadata": true,
+      "experimentalDecorators": true,
+      "strict": true,
+      "incremental": true,
+      "lib": ["esnext"],
+      "module": "commonjs",
+      "moduleResolution": "node",
+      "noUnusedLocals": true,
+      "outDir": "./dist",
+      "pretty": true,
+      "removeComments": true,
+      "resolveJsonModule": true,
+      "sourceMap": true,
+      "strictFunctionTypes": true,
+      "strictBindCallApply": true,
+      "target": "esnext",
+      "types": ["node"],
+      "rootDir": "src"
+  },
+  "exclude": ["node_modules", "test", "example"],
+  "include": ["src/**/*"],
+  "typedocOptions": {
+      "out": "./docs/",
+      "readme": "./README.md",
+      "name": "zermelo.ts",
+      "exclude": ["**/node_modules/**"],
+      "mode": "file",
   }
+}
