--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "build": "tsc --build",
     "compile": "tsc -p .",
-    "clean": "tsc --build --clean"
+    "clean": "tsc --build --clean",
+    "test": "node test/index.test.js"
   },
   "main": "dist/index",
   "author": "LuukOriginal",
